# flux-openmetadata

./: .env.production  .gitignore  README.md  index.html  package-lock.json  package.json  vercel.json  vercel_list.txt  vite.config.js
api/: firecrawl_rag_knowledge_base.json  omni_rag_knowledge_base.json  rag_engine.js  rag_search.js
openmetadata-mcp-server/: .env.example  CHANGELOG.md  LICENSE  README.md  SUBMISSION.md  demo.py  mcp_settings.json  pyproject.toml  requirements.txt  setup.bat
openmetadata-mcp-server/.github/workflows/: ci.yml
openmetadata-mcp-server/openmetadata_mcp/: __init__.py  client.py  config.py  server.py  tools.py
openmetadata-mcp-server/tests/: test_tools.py
public/: demo.html
scratch/: test_rag.js
scripts/: ingest_firecrawl.js
src/: App.jsx  index.css
src/api/: openmetadata.js
src/utils/: ai-processor.js
web-demo/: package.json
web-demo/src/components/: OpenMetadataDemo.tsx
